# Clavi-Agent

./: .gitignore  MANIFEST.in  README.md  README_CN.md  pyproject.toml  shared_context_test.json  start-server.cmd  start-server.ps1  start-server.sh
clavi_agent/: __init__.py  account_constants.py  account_migration.py  account_models.py  account_store.py  agent.py  agent_runtime.py  agent_store.py  agent_template_models.py  approval_store.py  cli.py  config.py  file_previews.py  integration_models.py  integration_store.py  learned_workflow_models.py  learned_workflow_store.py  llm_routing_models.py  logger.py  memory_provider.py  run_manager.py  run_models.py  run_store.py  runtime_setup.py  runtime_tools.py  scheduled_task_models.py  scheduled_task_service.py  scheduled_task_store.py  server.py  session.py  session_models.py  session_store.py  skill_improvement_models.py  skill_improvement_store.py  skill_improvement_utils.py  sqlite_schema.py  tool_execution.py  trace_analysis.py  trace_store.py  upload_models.py  (+3 more)
examples/: 01_basic_tools.py  02_simple_agent.py  03_session_notes.py  04_full_agent.py  05_provider_selection.py  06_tool_schema_demo.py
scripts/: setup-config.ps1  setup-config.sh
tests/: test_account_migration.py  test_account_store.py  test_agent.py  test_agent_runtime.py  test_agent_store.py  test_agent_streaming.py  test_auth_api.py  test_bash_tool.py  test_config_parallel_delegate_limit.py  test_delegate_parallel.py  test_feishu_adapter.py  test_integration.py  test_integrations_dispatcher.py  test_integrations_gateway.py  test_integrations_router.py  test_integrations_store.py  test_learned_workflow_store.py  test_llm.py  test_llm_clients.py  test_llm_streaming.py  test_llm_wrapper_base_url.py  test_markdown_links.py  test_mcp.py  test_message_content.py  test_note_tool.py  test_run_manager.py  test_run_models.py  test_run_store.py  test_runtime_setup.py  test_scheduled_tasks.py  (+15 more)
(+48 files in other folders)
