[project]
name = "clavi-agent"
version = "0.1.0"
description = "Clavi Agent: The key to next-gen intelligent action"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Clavi Agent Team"}
]
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
    "argon2-cffi>=23.1.0",
    "mcp>=1.0.0",
    "pytest>=8.4.2",
    "requests>=2.31.0",
    "tiktoken>=0.5.0",
    "prompt-toolkit>=3.0.0",
    "lark-oapi>=1.5.3",
    "pip>=25.3",
    "pipx>=1.8.0",
    "anthropic>=0.39.0",
    "openai>=1.57.4",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
clavi-agent = "clavi_agent.cli:main"
clavi-agent-server = "clavi_agent.server:main"
clavi-agent-setup-runtime = "clavi_agent.runtime_setup:main"
clavi-agent-migrate-root-data = "clavi_agent.account_migration:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["clavi_agent*"]
exclude = ["tests*"]

# Include skills directory (git submodule) as package data
# After moving submodule to clavi_agent/skills
[tool.setuptools.package-data]
clavi_agent = ["skills/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
cache_dir = "workspace/.pytest_cache"
asyncio_mode = "auto"

[tool.pylint.messages_control]
# Disable warnings for Tool.execute method signature differences
# We intentionally use explicit parameters in subclasses for better type hints
disable = [
    "arguments-differ",  # Allow subclasses to have different parameter signatures
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
]



